Fix broken css bg image. Add new footer partial

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,5 @@
 header {
-	background: url(/images/headerBg.png);
+	background: url(../images/headerBg.png);
 	background-size: cover;
 	padding: 20px;
 	@include max_mq(600px) {
